Add meta preview

--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta property="og:title" content="HouseRent" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="/preview.png"
+    />
+    <meta property="og:url" content="https://final-capstone-n7jz.onrender.com/" />
     <title>Vite + React</title>
   </head>
   <body>
